demo-untangled-cdc-pkg1/main/default/objects/Account_Rating_Change__e/Account_Rating_Change__e.object-meta.xml
<CustomObject>
    <description>Represents some event pertinent to your business logic. For simplicity in the demo, we monitored for simple field value changes.</description>
    <label>Account Rating Change</label>
    <pluralLabel>Account Rating Changes</pluralLabel>
</CustomObject>