demo-untangled-cdc-pkg1/main/default/objects/Account_Rating_Change__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>