demo-untangled-cdc-pkg1/main/default/objects/Account_Rating_Change__e/fields/New_Rating__c.field-meta.xml
<CustomField>
    <fullName>New_Rating__c</fullName>
    <label>New Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>